--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-        "SWF_URL": "https://joseph-crosman.github.io/GoAnimate-Modded-Assets/animation/414827163ad4eb60",
-        "STORE_URL": "https://joseph-crosman.github.io/GoAnimate-Modded-Assets/store/3a981f5cb2739137",
-        "CLIENT_URL": "https://joseph-crosman.github.io/GoAnimate-Modded-Assets/static/ad44370a650793d9"
+        "SWF_URL": "https://josephcrosmanplays532.github.io/GoCandy-Offline-Assets/animation/c498cth45wieotnc45",
+        "STORE_URL": "https://josephcrosmanplays532.github.io/GoCandy-Offline-Assets/store/3a981f5cb2739137",
+        "CLIENT_URL": "https://josephcrosmanplays532.github.io/GoCandy-Offline-Assets/static/ad44370a650793d9"
 }
